# GSEAV2

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt
data/example_input/gr10a_1.GseaPreranked.1681387666846/: gsea_report_for_na_neg_1681387666846.tsv  gsea_report_for_na_pos_1681387666846.tsv
src/gsea_tool/: __init__.py  bar_plot.py  cherry_picked.py  configuration.py  data_ingestion.py  dot_plot.py  go_clustering.py  meta_analysis.py  notes_generation.py  unbiased.py
src/gsea_tool/scripts/: __init__.py  svp_launcher.py
tests/unit_10/: test_orchestration_coverage.py  test_unit_10.py
