[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gsea-tool"
version = "2.1.0"
description = "GSEA Proteomics Visualizer: cohort-level GSEA result analysis and publication-quality figure generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
gsea-tool = "gsea_tool.scripts.svp_launcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
